# cortex

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml  lint.yml  test.yml
benchmarks/: __init__.py  bench_all.py  bench_latency.py  bench_latency_inproc.py  bench_latency_sync.py  bench_throughput.py
cortex_wire_cpp/: CMakeLists.txt  DOCS.md  README.md
cortex_wire_cpp/cmake/: cortex_wire_cppConfig.cmake.in
cortex_wire_cpp/include/cortex_wire/: context.hpp  discovery_client.hpp  fingerprint_table.hpp  header.hpp  metadata.hpp  oob_buffer.hpp  publisher.hpp  subscriber.hpp
cortex_wire_cpp/scripts/: gen_fingerprint_table.py
cortex_wire_cpp/src/: discovery_client.cpp  header.cpp  metadata.cpp  publisher.cpp  subscriber.cpp
cortex_wire_cpp/test/: test_discovery_client.cpp  test_fingerprint_table.cpp  test_header.cpp  test_metadata.cpp  test_oob_buffer.cpp  test_pub_sub_roundtrip.cpp
docs/: critique.md  design-review.md  gen_ref_pages.py  index.md  mkdocs.yml  optimizations.md
docs/components/: discovery.md  messages.md  node-and-executors.md  publisher-subscriber.md  serialization.md
docs/concepts/: architecture.md  async-execution-model.md  discovery-protocol.md  fingerprinting.md  message-wire-format.md  transport-and-qos.md
docs/getting-started/: discovery-daemon.md  installation.md  quickstart.md
docs/guides/: benchmarks.md  debugging.md  performance-tuning.md  sync-mode.md
docs/reference/: index.md
docs/reference/core/: executor.md  index.md  node.md  publisher.md  subscriber.md  subscriber_base.md  sync_subscriber.md  types.md
docs/reference/discovery/: client.md  daemon.md  index.md  protocol.md
docs/reference/messages/: base.md  index.md  standard.md
docs/reference/utils/: hashing.md  index.md  logging.md  loop.md  runtime.md  serialization.md  tracing.md
docs/site/: 404.html  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  search.json  sitemap.xml
docs/site/components/discovery/: index.html
docs/site/components/messages/: index.html
docs/site/components/node-and-executors/: index.html
docs/site/components/publisher-subscriber/: index.html
docs/site/components/serialization/: index.html
docs/site/concepts/architecture/: index.html
docs/site/concepts/async-execution-model/: index.html
docs/site/concepts/discovery-protocol/: index.html
docs/site/concepts/fingerprinting/: index.html
docs/site/concepts/message-wire-format/: index.html
docs/site/concepts/transport-and-qos/: index.html
docs/site/critique/: index.html
docs/site/getting-started/discovery-daemon/: index.html
docs/site/getting-started/installation/: index.html
docs/site/getting-started/quickstart/: index.html
docs/site/guides/benchmarks/: index.html
docs/site/guides/debugging/: index.html
docs/site/guides/performance-tuning/: index.html
docs/site/tutorials/custom-messages/: index.html
docs/site/tutorials/multi-node-system/: index.html
docs/site/tutorials/numpy-and-images/: index.html
docs/site/tutorials/pytorch-tensors/: index.html
docs/tutorials/: custom-messages.md  multi-node-system.md  numpy-and-images.md  pytorch-tensors.md
examples/: __init__.py  async_publisher_control_loop.py  async_subscriber_control_loop.py  multi_node_system.py  publisher_dict.py  publisher_numpy.py  publisher_tensor.py  subscriber_dict.py  subscriber_numpy.py  subscriber_tensor.py  sync_publisher_control_loop.py  sync_subscriber_control_loop.py
ros2_bridge/: PLAN.md
ros2_bridge/cortex_ros2_bridge/: CMakeLists.txt  README.md  package.xml
ros2_bridge/cortex_ros2_bridge/include/cortex_ros2_bridge/: binding_factory.hpp  cortex_to_ros2_node.hpp  qos.hpp
ros2_bridge/cortex_ros2_bridge/include/cortex_ros2_bridge/adapters/: pointcloud.hpp  primitives.hpp
ros2_bridge/cortex_ros2_bridge/include/cortex_ros2_bridge/cortex_wire/: discovery_client.hpp  fingerprint_table.hpp  header.hpp  metadata.hpp  oob_buffer.hpp
ros2_bridge/cortex_ros2_bridge/launch/: composable_container.launch.py  cortex_to_ros2.launch.py  ros2_to_cortex.launch.py
ros2_bridge/cortex_ros2_bridge/scripts/: gen_fingerprint_table.py
ros2_bridge/cortex_ros2_bridge/src/: binding_factory.cpp  cortex_to_ros2_node.cpp  ros2_to_cortex_node.cpp
ros2_bridge/cortex_ros2_bridge/src/adapters/: image.cpp  pointcloud.cpp  pose.cpp  tensor.cpp  transform.cpp
ros2_bridge/cortex_ros2_bridge/src/cortex_wire/: discovery_client.cpp  header.cpp  metadata.cpp
ros2_bridge/cortex_ros2_bridge/test/: test_discovery_client.cpp  test_fingerprint_table.cpp  test_intra_process.cpp  test_oob_buffer.cpp  test_wire_header.cpp  test_wire_metadata.cpp
ros2_bridge/src/cortex_ros2_bridge/: CMakeLists.txt  README.md  package.xml
ros2_bridge/src/cortex_ros2_bridge/config/: example_full.yaml  example_minimal.yaml
ros2_bridge/src/cortex_ros2_bridge/include/cortex_ros2_bridge/: adapter.hpp  binding.hpp  config.hpp  registry.hpp  ros2_to_cortex_node.hpp
ros2_bridge/src/cortex_ros2_bridge/include/cortex_ros2_bridge/adapters/: arrays.hpp  (+5 more)
ros2_bridge/src/cortex_ros2_bridge/launch/: composable_container.launch.py  cortex_to_ros2.launch.py
ros2_bridge/src/cortex_ros2_bridge/src/: binding_factory.cpp  config.cpp  cortex_to_ros2_node.cpp  qos.cpp  registry.cpp
ros2_bridge/src/cortex_ros2_bridge/src/adapters/: arrays.cpp  primitives.cpp
ros2_bridge/src/cortex_ros2_bridge/test/: test_binding_factory.cpp  test_components_e2e.cpp  test_config.cpp  test_primitives.cpp  test_qos.cpp  test_registry.cpp  test_standard_adapters.cpp
src/cortex/: __init__.py
src/cortex/core/: __init__.py  executor.py  node.py  publisher.py  subscriber.py  subscriber_base.py  sync_subscriber.py  types.py
src/cortex/discovery/: __init__.py  client.py  daemon.py  protocol.py
src/cortex/messages/: __init__.py  base.py  standard.py
src/cortex/utils/: __init__.py  hashing.py  logging.py  loop.py  runtime.py  serialization.py  tracing.py
tests/: __init__.py  conftest.py  test_discovery.py  test_executor.py  test_hashing.py  test_messages.py  test_node.py  test_pubsub.py  test_serialization.py  test_sync_subscriber.py
